examples_k8s/keycloak/keycloak-db.yaml
##  _  __               _             _         ____  ____
## | |/ /___ _   _  ___| | ___   __ _| | __    |  _ \| __ )
## | ' // _ \ | | |/ __| |/ _ \ / _` | |/ /____| | | |  _ \
## | . \  __/ |_| | (__| | (_) | (_| |   <_____| |_| | |_) |
## |_|\_\___|\__, |\___|_|\___/ \__,_|_|\_\    |____/|____/
##           |___/
## 

## For MariaDB see also: https://github.com/Tob1as/docker-kubernetes-collection/blob/master/examples_k8s/mariadb.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  namespace: keycloak
  labels:
    app: keycloak-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      #imagePullSecrets:
      #- name: regcred
      restartPolicy: Always
      containers:
      - name: mariadb
        image: mariadb:10.11       # 10.11 = LTS , Supported architectures: amd64, arm64v8
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
          name: mariadb
          protocol: TCP
        readinessProbe:
          exec:
            command: ["/bin/sh", "-c", "mysqladmin ping -h localhost --user=root --password=$MARIADB_ROOT_PASSWORD || exit 1"]
            #command: ["/bin/sh", "-c", "mysqladmin ping -h localhost --user=$MARIADB_USER --password=$MARIADB_PASSWORD || exit 1"]
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "mysqladmin ping -h localhost --user=root --password=$MARIADB_ROOT_PASSWORD || exit 1"]
            #command: ["/bin/sh", "-c", "mysqladmin ping -h localhost --user=$MARIADB_USER --password=$MARIADB_PASSWORD || exit 1"]
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 5
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
      - name: exporter
        image: prom/mysqld-exporter:latest # Supported architectures: amd64, arm64v8, arm32v7
        imagePullPolicy: Always
        ports:
        - containerPort: 9104
          name: exporter
          protocol: TCP
        args:
        - "--mysqld.username=root:$(ROOT_PASSWORD)"
        - "--mysqld.address=localhost:3306"
        - "--web.listen-address=:9104"
        - "--web.telemetry-path=/metrics"
        #- "--log.level=info"
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "128Mi"
            cpu: "0.5"
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: keycloak-db-data

---

apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: keycloak
  labels:
    app: keycloak-db
spec:
  type: ClusterIP
  ports:
  - name: "mariadb"
    protocol: TCP
    port: 3306
    targetPort: 3306
  - name: "exporter"
    protocol: TCP
    port: 9104
    targetPort: 9104
  selector:
    app: keycloak-db
