examples_k8s/keycloak/keycloak.yaml
##  _  __               _             _
## | |/ /___ _   _  ___| | ___   __ _| | __
## | ' // _ \ | | |/ __| |/ _ \ / _` | |/ /
## | . \  __/ |_| | (__| | (_) | (_| |   <
## |_|\_\___|\__, |\___|_|\___/ \__,_|_|\_\
##           |___/

## Keycloak - Open Source Identity and Access Management
## https://www.keycloak.org/
## https://github.com/keycloak/keycloak
## https://hub.docker.com/r/keycloak/keycloak
## https://quay.io/repository/keycloak/keycloak
## Docs:
## * https://www.keycloak.org/getting-started/getting-started-docker
## * Container: https://www.keycloak.org/server/containers
## * All configuration: https://www.keycloak.org/server/all-config
## * Features: https://www.keycloak.org/server/features
## * healthcheck: https://www.keycloak.org/server/health
## Supported architectures: amd64, arm64
## URL: http://localhost:8080/auth
## Requirements: setup database (mariadb, postgres or other database) before start keycloak!

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      #imagePullSecrets:
      #- name: regcred
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.0
        #image: docker.io/keycloak/keycloak:26.0
        imagePullPolicy: Always
        args: ["start"]
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 9000
          name: management
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /auth/health/ready
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /auth/health/live
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 3
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - name: cacerts-jks
          subPath: cacerts.jks
          mountPath: /ssl/cacerts.jks
          readOnly: true
        - name: keycloak-ssl
          subPath: ssl.crt
          mountPath: /ssl/ssl.crt
          readOnly: true
        - name: keycloak-ssl
          subPath: ssl.key
          mountPath: /ssl/ssl.key
          readOnly: true
      volumes:
      - name: cacerts-jks
        secret:
          secretName: cacerts-jks
          defaultMode: 420 # decimal equivalent of octal 0644
          optional: true
      - name: keycloak-ssl
        secret:
          secretName: keycloak-ssl-secret
          defaultMode: 420 # decimal equivalent of octal 0644
          optional: true

#---
#
### help to convert to base64: https://github.com/Tob1as/docker-kubernetes-collection/blob/master/examples_k8s/ca-files-secret.yaml#L8-L14
#apiVersion: v1
#kind: Secret
#metadata:
#  name: keycloak-ssl-secret
#  namespace: keycloak
#  labels:
#    app: keycloak
#type: Opaque
#data:
#  ssl.crt: <ssl.crt>
#  ssl.key: <ssl.key>

---

apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
    - name: "http"
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: "https"
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: "managment"
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: keycloak

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
  annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    # Traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  #ingressClassName: nginx # nginx or traefik
  tls:
  - hosts:
    - auth.example.com
    secretName: ingress-tls-secret
  rules:
  - host: auth.example.com
    http:
      paths:
      - path: /auth               # https://auth.example.com/auth/
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              #name: http
              number: 8080
